init，db